--- a/gallery.html
+++ b/gallery.html
@@ -47,39 +47,39 @@
     </ul>
    </div>
   </div>
-  <div class="container" style="padding-bottom:0;">
+  <div class="container" id="photos" style="padding-bottom:0;">
    <div class="header">
     <h1 style="color:white;font-family:sans-serif;">PHOTO GALLERY</h1>
    </div>
    <div class="image-container">
-    <img src = "images/band/9.webp" alt="Image of Itsy Bitsy standing in the middle of a street">
-    <img src = "images/band/11.webp" loading="lazy" alt="Image of Itsy Bitsy sitting down by a wall in a shopping center.">
-    <img src = "images/band/10.webp" loading="lazy" alt="Head-on shot image of Itsy Bitsy sitting down by a wall in a shopping center.">
-    <img src = "images/band/12.webp" loading="lazy" alt="Image of the heads of Itsy Bitsy in a circle.">
-    <img src = "images/band/8.webp" loading="lazy" alt="Image of Tovi, Lilly, and Maz sitting inside Mixed Metaphor Studios.">
-   <img src = "images/band/6.webp" loading="lazy" alt="Image of Tovi singing inside of Folks Candle shop on November 10th, 2023. Photo taken by Michael Floyd.">
-    <img src = "images/band/13.webp" loading="lazy" alt="Image of Lilly sitting with a guitar inside of Mixed Metaphor Studios.">
-    <img src = "images/band/7.webp" loading="lazy" alt="Image of Jack playing bass inside of Folks Candle shop on November 10th, 2023. Photo taken by Michael Floyd.">
-    <img src = "images/band/4.webp" loading="lazy" alt="Image of Maz playing guitar in Horseshoe Bend.">
-    <img src = "images/band/2.webp" loading="lazy" alt="Image of Jack playing bass and Lilly playing guitar in Horseshoe Bend.">
-    <img src = "images/band/1.webp" loading="lazy" alt="Image of Brian behind a drumset in front of a dirt path and river.">
-    <img src = "images/band/3.webp" loading="lazy" alt="Image of Tovi singing in Horseshoe Bend.">
-    <img src = "images/band/5.webp" loading="lazy" alt="Image of Lilly playing guitar, Brian playing drums, and Tovi pointing towards the sky inside of Folks Candle shop on November 10th, 2023. Photo taken by Michael Floyd.">
+    <img src = "images/band/9.webp" width="2048" height="1536" alt="Image of Itsy Bitsy standing in the middle of a street">
+    <img src = "images/band/11.webp" loading="lazy" width="1099" height="1099" alt="Image of Itsy Bitsy sitting down by a wall in a shopping center.">
+    <img src = "images/band/10.webp" loading="lazy" width="1852" height="1125" alt="Head-on shot image of Itsy Bitsy sitting down by a wall in a shopping center.">
+    <img src = "images/band/12.webp" loading="lazy" width="1253" height="1253" alt="Image of the heads of Itsy Bitsy in a circle.">
+    <img src = "images/band/8.webp" loading="lazy" width="1500" height="1000" alt="Image of Tovi, Lilly, and Maz sitting inside Mixed Metaphor Studios.">
+   <img src = "images/band/6.webp" loading="lazy" width="1000" height="1500" alt="Image of Tovi singing inside of Folks Candle shop on November 10th, 2023. Photo taken by Michael Floyd.">
+    <img src = "images/band/13.webp" loading="lazy" width="1500" height="1000" alt="Image of Lilly sitting with a guitar inside of Mixed Metaphor Studios.">
+    <img src = "images/band/7.webp" loading="lazy" width="1000" height="1500" alt="Image of Jack playing bass inside of Folks Candle shop on November 10th, 2023. Photo taken by Michael Floyd.">
+    <img src = "images/band/4.webp" loading="lazy" width="2144" height="1424" alt="Image of Maz playing guitar in Horseshoe Bend.">
+    <img src = "images/band/2.webp" loading="lazy" width="2144" height="1424" alt="Image of Jack playing bass and Lilly playing guitar in Horseshoe Bend.">
+    <img src = "images/band/1.webp" loading="lazy" width="1414" height="2221" alt="Image of Brian behind a drumset in front of a dirt path and river.">
+    <img src = "images/band/3.webp" loading="lazy" width="2144" height="1424" alt="Image of Tovi singing in Horseshoe Bend.">
+    <img src = "images/band/5.webp" loading="lazy" width="1500" height="1000" alt="Image of Lilly playing guitar, Brian playing drums, and Tovi pointing towards the sky inside of Folks Candle shop on November 10th, 2023. Photo taken by Michael Floyd.">
    </div>
   </div>
-  <div class="container">
+  <div class="container" id="posters">
    <div class="header">
     <h1 style="color:white;font-family:sans-serif;">POSTERS</h1>
    </div>
    <div class="poster-container">
-    <img src = "images/showposters/hwposterhd.webp" loading="lazy" alt="Scanned image of a promotional poster for Itsy Bitsy's Halloween concert at Folks on November 2nd, 2024.">
-    <img src = "images/showposters/gradposterhd.webp" loading="lazy" alt="Scanned image of a promotional poster for Itsy Bitsy's graduation party concert on June 6th, 2024.">
-    <img src = "images/showposters/folks1posterhd.webp" loading="lazy" alt="Scanned image of a promotional poster for Itsy Bitsy's first concert at Folks on November 10th, 2023.">
-    <img src = "images/showposters/ghosthausposterhd.webp" loading="lazy" alt="Scanned image of a promotional poster for Itsy Bitsy's concert with bands Dead Register and Mall Goth Moths on September 1st, 2023.">
-    <img src = "images/showposters/gracieposter1hd.webp" loading="lazy" alt="Scanned image of a promotional poster for Itsy Bitsy's show in Horseshoe Bend on July 18th, 2023. Drawn with colored pencils, the design is comprised of sunflowers, leaves, and explosions.">
-    <img src = "images/showposters/gracieposter2hd.webp" loading="lazy" alt="Scanned image of a promotional poster for Itsy Bitsy's show in Horseshoe Bend on July 18th, 2023. Drawn with colored pencils.">
-    <img src = "images/showposters/canyonposter2hd.webp" loading="lazy" alt="Scanned image of a promotional poster for Itsy Bitsy's concert for Canyon's birthday on June 16th, 2023.">
-    <img src = "images/showposters/canyonposterhd.webp" loading="lazy" alt="Scanned image of a promotional poster for Itsy Bitsy's concert for Canyon's birthday on June 16th, 2023. Design is a collage of photos of Itsy Bitsy with Canyon on a background of newspapers.">
+    <img src = "images/showposters/hwposterhd.webp" loading="lazy" width="1280" height="1515" alt="Scanned image of a promotional poster for Itsy Bitsy's Halloween concert at Folks on November 2nd, 2024.">
+    <img src = "images/showposters/gradposterhd.webp" loading="lazy" width="1440" height="1800" alt="Scanned image of a promotional poster for Itsy Bitsy's graduation party concert on June 6th, 2024.">
+    <img src = "images/showposters/folks1posterhd.webp" loading="lazy" width="805" height="927" alt="Scanned image of a promotional poster for Itsy Bitsy's first concert at Folks on November 10th, 2023.">
+    <img src = "images/showposters/ghosthausposterhd.webp" loading="lazy" width="1440" height="1800" alt="Image of a promotional poster for Itsy Bitsy's concert with bands Dead Register and Mall Goth Moths on September 1st, 2023.">
+    <img src = "images/showposters/gracieposter1hd.webp" loading="lazy" width="1440" height="1800" alt="Scanned image of a promotional poster for Itsy Bitsy's show in Horseshoe Bend on July 18th, 2023. Drawn with colored pencils, the design is comprised of sunflowers, leaves, and explosions.">
+    <img src = "images/showposters/gracieposter2hd.webp" loading="lazy" width="1440" height="1800" alt="Scanned image of a promotional poster for Itsy Bitsy's show in Horseshoe Bend on July 18th, 2023. Drawn with colored pencils.">
+    <img src = "images/showposters/canyonposter2hd.webp" loading="lazy" width="1440" height="1800" alt="Scanned image of a promotional poster for Itsy Bitsy's concert for Canyon's birthday on June 16th, 2023.">
+    <img src = "images/showposters/canyonposterhd.webp" loading="lazy" width="1440" height="1799" alt="Scanned image of a promotional poster for Itsy Bitsy's concert for Canyon's birthday on June 16th, 2023. Design is a collage of photos of Itsy Bitsy with Canyon on a background of newspapers.">
    </div>
   </div>
   <div class="footer">
