--- a/gallery.html
+++ b/gallery.html
@@ -67,80 +67,93 @@
      <source media="(max-width:800px)" srcset="images/band/responsive/11-800w.webp">
      <img src="images/band/11.webp" loading="lazy" width="1099" height="1099" alt="Image of Itsy Bitsy sitting down by a wall in a shopping center.">
     </picture>
-    <img
-     src="images/band/10.webp" loading="lazy" width="1852" height="1125" alt="Head-on shot image of Itsy Bitsy sitting down by a wall in a shopping center.">
-    <img
-     srcset="images/band/responsive/12-400w.webp 400w,
-             images/band/responsive/12-600w.webp 600w,
-             images/band/responsive/12-800w.webp 800w,
-             images/band/responsive/12-1000w.webp 1000w,
-             images/band/responsive/12-1200w.webp 1200w"
-     sizes="(max-width: 400px) 400px,
-            (max-width: 600px) 600px,
-            (max-width: 800px) 800px,
-            (max-width: 1000px) 1000px,
-            (max-width: 1200px) 1200px"
-     src="images/band/12.webp" loading="lazy" width="1253" height="1253" alt="Image of the heads of Itsy Bitsy in a circle.">
-    <img
-     src="images/band/8.webp" loading="lazy" width="1500" height="1000" alt="Image of Tovi, Lilly, and Maz sitting inside Mixed Metaphor Studios.">
-    <img
-     srcset="images/band/responsive/6-400w.webp 400w,
-             images/band/responsive/6-600w.webp 600w,
-             images/band/responsive/6-800w.webp 800w,
-             images/band/responsive/6-1000w.webp 1000w"
-     sizes="(max-width: 400px) 400px,
-            (max-width: 600px) 600px,
-            (max-width: 800px) 800px,
-            (max-width: 1000px) 1000px"
-     src="images/band/6.webp" width="1000" height="1500" alt="Image of Tovi singing inside of Folks Candle shop on November 10th, 2023. Photo taken by Michael Floyd.">
-    <img
-     src="images/band/13.webp" loading="lazy" width="1500" height="1000" alt="Image of Lilly sitting with a guitar inside of Mixed Metaphor Studios.">
-    <img
-     src="images/band/7.webp" loading="lazy" width="1000" height="1500" alt="Image of Jack playing bass inside of Folks Candle shop on November 10th, 2023. Photo taken by Michael Floyd.">
-    <img
-     srcset="images/band/responsive/4-400w.webp 400w,
-             images/band/responsive/4-600w.webp 600w,
-             images/band/responsive/4-800w.webp 800w,
-             images/band/responsive/4-1000w.webp 1000w,
-             images/band/responsive/4-1200w.webp 1200w,
-             images/band/responsive/4-1600w.webp 1600w,
-             images/band/responsive/4-2000w.webp 2000w"
-     sizes="(max-width: 400px) 400px,
-            (max-width: 600px) 600px,
-            (max-width: 800px) 800px,
-            (max-width: 1000px) 1000px,
-            (max-width: 1200px) 1200px,
-            (max-width: 1600px) 1600px,
-            (max-width: 2000px) 2000px"
-     src="images/band/4.webp" width="2144" height="1424" alt="Image of Maz playing guitar in Horseshoe Bend.">
-    <img
-     src="images/band/2.webp" loading="lazy" width="2144" height="1424" alt="Image of Jack playing bass and Lilly playing guitar in Horseshoe Bend.">
-    <img
-     srcset="images/band/responsive/1-400w.webp 400w,
-             images/band/responsive/1-600w.webp 600w,
-             images/band/responsive/1-800w.webp 800w,
-             images/band/responsive/1-1000w.webp 1000w,
-             images/band/responsive/1-1200w.webp 1200w"
-     sizes="(max-width: 400px) 400px,
-            (max-width: 600px) 600px,
-            (max-width: 800px) 800px,
-            (max-width: 1000px) 1000px,
-            (max-width: 1200px) 1200px"
-     src="images/band/1.webp" loading="lazy" width="1414" height="2221" alt="Image of Brian behind a drumset in front of a dirt path and river.">
-    <img
-     src="images/band/3.webp" loading="lazy" width="2144" height="1424" alt="Image of Tovi singing in Horseshoe Bend.">
-    <img
-     srcset="images/band/responsive/5-400w.webp 400w,
-             images/band/responsive/5-600w.webp 600w,
-             images/band/responsive/5-800w.webp 800w,
-             images/band/responsive/5-1000w.webp 1000w,
-             images/band/responsive/5-1200w.webp 1200w"
-     sizes="(max-width: 400px) 400px,
-            (max-width: 600px) 600px,
-            (max-width: 800px) 800px,
-            (max-width: 1000px) 1000px,
-            (max-width: 1200px) 1200px"
-     src="images/band/5.webp" loading="lazy" width="1500" height="1000" alt="Image of Lilly playing guitar, Brian playing drums, and Tovi pointing towards the sky inside of Folks Candle shop on November 10th, 2023. Photo taken by Michael Floyd.">
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/10-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/10-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/10-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/band/responsive/10-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/band/responsive/10-1200w.webp">
+     <source media="(max-width:1600px)" srcset="images/band/responsive/10-1600w.webp">
+     <img src="images/band/10.webp" loading="lazy" width="1852" height="1125" alt="Head-on shot image of Itsy Bitsy sitting down by a wall in a shopping center.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/12-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/12-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/12-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/band/responsive/12-1000w.webp">
+     <img src="images/band/12.webp" loading="lazy" width="1253" height="1253" alt="Image of the heads of Itsy Bitsy in a circle.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/8-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/8-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/8-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/band/responsive/8-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/band/responsive/8-1200w.webp">
+     <img src="images/band/8.webp" loading="lazy" width="1500" height="1000" alt="Image of Tovi, Lilly, and Maz sitting inside Mixed Metaphor Studios.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/6-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/6-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/6-800w.webp">
+     <img src="images/band/6.webp" width="1000" height="1500" alt="Image of Tovi singing inside of Folks Candle shop on November 10th, 2023. Photo taken by Michael Floyd.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/13-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/13-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/13-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/band/responsive/13-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/band/responsive/13-1200w.webp">
+     <img src="images/band/13.webp" loading="lazy" width="1500" height="1000" alt="Image of Lilly sitting with a guitar inside of Mixed Metaphor Studios.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/7-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/7-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/7-800w.webp">
+     <img src="images/band/7.webp" loading="lazy" width="1000" height="1500" alt="Image of Jack playing bass inside of Folks Candle shop on November 10th, 2023. Photo taken by Michael Floyd.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/4-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/4-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/4-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/band/responsive/4-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/band/responsive/4-1200w.webp">
+     <source media="(max-width:1600px)" srcset="images/band/responsive/4-1600w.webp">
+     <img src="images/band/4.webp" width="2144" height="1424" alt="Image of Maz playing guitar in Horseshoe Bend.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/2-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/2-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/2-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/band/responsive/2-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/band/responsive/2-1200w.webp">
+     <source media="(max-width:1600px)" srcset="images/band/responsive/2-1600w.webp">
+     <img src="images/band/2.webp" loading="lazy" width="2144" height="1424" alt="Image of Jack playing bass and Lilly playing guitar in Horseshoe Bend.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/1-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/1-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/1-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/band/responsive/1-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/band/responsive/1-1200w.webp">
+     <img src="images/band/1.webp" loading="lazy" width="1414" height="2221" alt="Image of Brian behind a drumset in front of a dirt path and river.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/3-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/3-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/3-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/band/responsive/3-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/band/responsive/3-1200w.webp">
+     <source media="(max-width:1600px)" srcset="images/band/responsive/3-1600w.webp">
+     <img src="images/band/3.webp" loading="lazy" width="2144" height="1424" alt="Image of Tovi singing in Horseshoe Bend.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/band/responsive/5-400w.webp">
+     <source media="(max-width:600px)" srcset="images/band/responsive/5-600w.webp">
+     <source media="(max-width:800px)" srcset="images/band/responsive/5-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/band/responsive/5-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/band/responsive/5-1200w.webp">
+     <img src="images/band/5.webp" loading="lazy" width="1500" height="1000" alt="Image of Lilly playing guitar, Brian playing drums, and Tovi pointing towards the sky inside of Folks Candle shop on November 10th, 2023. Photo taken by Michael Floyd.">
+    </picture>
    </div>
   </div>
   <div class="container" id="posters">
